--- a/src/components/Social/Style.css
+++ b/src/components/Social/Style.css
@@ -40,6 +40,9 @@
 .container-bar .fa-instagram{
     background: #d6249f;
 }
+.container-bar .fa-whatsapp{
+    background: #00ae84;
+}
 .container-bar .fa-tiktok{
 	background: black;
     color:white;
