--- a/src/components/SpecialMenu/SpecialMenu.css
+++ b/src/components/SpecialMenu/SpecialMenu.css
@@ -11,9 +11,7 @@
 .app__specialMenu-menu {
     width: 100%;
     margin: 2rem 0;
-
-    display: flex;
-    justify-content: center;
+    margin: auto;
     align-items: flex-start;
     flex-direction: row;
 }
@@ -36,7 +34,7 @@
 
 .app__specialMenu-menu_img {
     width: 410px;
-    margin: 0 2rem;
+    margin: auto;
 }
 
 .app__specialMenu-menu_img img {
@@ -48,9 +46,7 @@
 .app__specialMenu_menu_items {
     display: flex;
     flex-direction: column;
-
     margin: 2rem 0;
-    width: 100%;
 }
 
 @media screen and (min-width: 2000px) {
